Changed position of search bar and fixed horizontal scrollbar.

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,9 @@
   margin: 0;
   padding: 0;
   font-family: 'Roboto', 'PT Sans', sans-serif;
+  /* overflow-x so broken to fix horizontal scrolling */
+  overflow-x:hidden; 
+
 }
 
 body {
